skrevet i del2, csv test koblet til

--- a/proj_environment-main/notebooks/del2.ipynb
+++ b/proj_environment-main/notebooks/del2.ipynb
@@ -23,17 +23,13 @@
    "metadata": {},
    "source": [
     "#### Oppgave 4: Dataanalyse\n",
-    "I denne delen av prosjektet skal dere bruke verktøy som NumPy, Pandas, Matplotlib osv. til å beregne statistiske mål som gjennomsnitt, median og standardavvik, som er essensielle for å forstå datakvaliteten og identifisere trender. Videre vil dere implementere enkle statistiske analyser for å avdekke mønstre i dataene, noe som kan gi innsikt i miljøforholdene over tid. Denne analysen vil danne grunnlaget for videre visualisering og prediktiv analyse, og bidra til en dypere forståelse av de miljømessige faktorene som påvirker samfunnet.\n",
+    "Vi har brukt Pandas for å lese inn datasettet vårt som er i form av en CSV-fil, og brukt Pandas til å beregne de statiske målene på en enkel og effektiv måte. vi har brukt metodene .mean(), .median() og.std() for å finne gjennomsnittet, medianen og standardavviket av solskinnstimer i perioden 2016 til 2020.\n",
     "\n",
-    "Vurderingskriterier:\n",
+    "Vi kunne brukt Pandas for sammenheng mellom to varibler som solskinnstimer og temperatur. Vi kunne brukt det til å regne ut korrealasjonskoeffisienten mellom de to med metoden .corr(). hvor en positiv korrelasjon villle indikert at høyere solskinnstimer sammenfallerr med høyere temperaturer. \n",
     "\n",
-    "Hvordan kan du bruke NumPy og Pandas til å beregne gjennomsnitt, median og standardavvik for de innsamlede dataene, og hvorfor er disse statistiske målene viktige?\n",
+    "For å håndtere skevheter i dataene har vi laget en funksjon som går gjennom datasettet og identifiserer duplikater og manglende verdier. Den fyller inn de manglende verdiene og fjerner duplikatene slik at tallene som vi har brukt videre for å regne ut de statistiske tallene er mer pålitelig. Denne finner vi i oppgave 3 i del 1. \n",
     "\n",
-    "Kan du gi et eksempel på hvordan du vil implementere en enkel statistisk analyse for å undersøke sammenhengen mellom to variabler i datasettet?\n",
-    "\n",
-    "Hvordan planlegger du å håndtere eventuelle skjevheter i dataene under analysen, og hvilke metoder vil du bruke for å sikre at analysen er pålitelig?\n",
-    "\n",
-    "Hvilke visualiseringer vil du lage for å støtte analysen din, og hvordan vil disse visualiseringene hjelpe deg med å formidle funnene dine?"
+    "Vi har integrert den beregnede medianen og gjennomsnittet i visualiseringen av dataene. dette gir et bedre oversikt over sentrale tendensene i datasettet, og gjør det lettere å forstå gjennomsnitt og medianen til tross for store variasjoner i dataene."
    ]
   },
   {
@@ -41,8 +37,37 @@
    "execution_count": null,
    "id": "05c485ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median er: sunshine_hours    2.9\n",
+      "dtype: float64\n",
+      "gjennomsnittet er: sunshine_hours    4.385413\n",
+      "dtype: float64\n",
+      "standardavviket er: sunshine_hours    4.657096\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sti_til_sentralmal = os.path.abspath(os.path.join(os.getcwd(), '..', 'src'))\n",
+    "sys.path.insert(0, sti_til_sentralmal)\n",
+    "\n",
+    "from sentralmal import statistikk \n",
+    "    \n",
+    "filbane = os.path.abspath(os.path.join(os.getcwd(), '..', 'data', 'utfylt_data.csv'))\n",
+    "\n",
+    "median, gjennomsnitt, standardavvik = statistikk(filbane) #kaller på funksjonen og sender inn filbane\n",
+    "\n",
+    "print(\"median er:\", median) #summerer median\n",
+    "print(\"gjennomsnittet er:\", gjennomsnitt) # summerergjennomsnittet\n",
+    "print(\"standardavviket er:\", standardavvik) #finner standardavviket"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,20 +75,18 @@
    "metadata": {},
    "source": [
     "#### Oppgave 5: Visualisering\n",
-    "Denne oppgaven fokuserer på bruken av Matplotlib og Seaborn for å skape informative og engasjerende visualiseringer av de analyserte miljødataene. I denne delen av prosjektet skal dere utvikle grafer og diagrammer som eksempelvis illustrerer endringer i luftkvalitet over tid, sammenligning av temperaturdata, og andre relevante trender. Målet er å gjøre dataene mer tilgjengelige og forståelige for et bredere publikum. I tillegg, dersom tiden tillater det, skal dere utforske muligheten for å lage interaktive visualiseringer ved hjelp av Widgets, Plotly eller Bokeh, noe som kan gi brukerne en mer dynamisk opplevelse av dataene.\n",
+    "Vi har valgt å bruke linjediagram for å visualisere miljødataene våre, hvor hvert år blir representert med egen linje.i tilegg har vi implementert median og gjennomsnitt for å få visualisert dette i dataene for å gjøre visualiseringen mer informativ. Denne måten å presentere dataene på gir en oversiktlig fremstilling av åren, og diagrammet gjør det enkelt åidentifisere sesongvariasjon og trender.\n",
     "\n",
-    "Vurderingskriterier:\n",
-    "\n",
-    "Hvilke spesifikke typer visualiseringer planlegger du å lage for å representere eksempelvis endringer i luftkvalitet og temperaturdata, og hvorfor valgte du disse?\n",
-    "\n",
-    "Hvordan kan Matplotlib og Seaborn brukes til å forbedre forståelsen av de analyserte dataene, og hvilke funksjoner i disse bibliotekene vil være mest nyttige?\n",
-    "\n",
-    "Hvordan vil du håndtere og visualisere manglende data i grafene dine for å sikre at de fortsatt er informative?\n",
-    "\n",
-    "Kan du beskrive prosessen for å lage interaktive visualiseringer med Widgets, Plotly eller Bokeh, og hvilke fordeler dette kan gi i forhold til statiske visualiseringer?\n",
-    "\n",
-    "Hvordan vil du evaluere effektiviteten av visualiseringene dine i å formidle de viktigste funnene fra dataanalysen til et bredere publikum?"
+    "Det ville vært mulig å implementere interaktive visualiseringer med verktøy som Plotly ellerr Bokeh. Dette ville kunne gitt brukeren mulighet til å zoome, filtrere og utforske dataene på en dynamisk måte, dette ville kunnet øke brukervenligheten, forståelsen og gjøre det lettere å få åoversikt over dataene."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0500f16e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -281,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
