total readme fil og kilder lagt til for del1

--- a/proj_environment-main/notebooks/del1.ipynb
+++ b/proj_environment-main/notebooks/del1.ipynb
@@ -2,19 +2,53 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b256afce",
+   "metadata": {},
+   "source": [
+    "**Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [del 2 →](del2.ipynb) av prosjektet**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "25f3e1f3",
    "metadata": {},
    "source": [
-    "Oppgaver: \n",
+    "## **Del 1**\n",
     "\n",
     "I dette prosjektet skal vi gjennomføre oppgaver som fokuserer på oppsett av utviklingsmiljø, innsamling, behandling, analyse, visualisering og prediktiv analyse av miljødata. Oppgave 1 handler om å sette opp et fungerende utviklingsmiljø. Oppgave 2 innebærer å identifisere relevante åpne datakilder og implementere funksjonalitet for å hente data fra disse kildene ved hjelp av Python. I oppgave 3 skal vi utvikle funksjoner for å rense og formatere de innsamlede dataene, med fokus på håndtering av manglende verdier.\n",
     "\n",
-    "#### Oppgave 1: Sett opp utviklingsmiljø\n",
+    "Kode nødvendig for å kunne hente funksjoner senere:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01d3b14b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath('..'))\n",
+    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdd644d3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## **Oppgave 1: Sett opp utviklingsmiljø**\n",
     "\n",
     "I VSCode, opprett en ny Jupyter Notebook-fil (med filendelsen «.ipynb») i prosjektmappen. Skriv og kjør kode i den første cellen for å teste at miljøet fungerer som det skal:\n",
     "\n",
     "Gå til [oppgave 1](oppg1.ipynb) \n",
-    "\n"
+    "\n",
+    "---"
    ]
   },
   {
@@ -22,12 +56,12 @@
    "id": "95d9c533",
    "metadata": {},
    "source": [
-    "#### Oppgave 2: Datainnsamling\n",
+    "## **Oppgave 2: Datainnsamling**\n",
     "\n",
     "### Hvorfor MET?\n",
     "For dette prosjektet ønsket vi å se på litt ukonvesjonelle data, så vi valgte derfor å se på solskinn varighet. Solskinn kan indikere endringer i skydekke og værmønstre. Det kan også fortelle oss noe om hvor mye solenergi som når bakken som vil påvirke lokal tempratur og som videre kan spille inn på oppvarmingstrender. Spesielt utvikling over tid vil være interessant. \n",
     "\n",
-    "Før vi bestemte oss for å undersøke sollys var vi først inne å gjode oss kjent med ulike API grensesnitt. Den som sto fram som et godt valg var 'The MET weather API', mer spesefikt valgte vi Frost API-en deres. Denne gir gratis tilgang til deres arkiv over historiske vær- og klimadata av stor variasjon og med mye detaljer av kvalitetskontrollerte målinger. \n",
+    "Før vi bestemte oss for å undersøke sollys var vi først inne å gjode oss kjent med ulike API grensesnitt. Den som sto fram som et godt valg var **The MET weather API**, mer spesefikt valgte vi **Frost API-en** deres. Denne gir gratis tilgang til deres arkiv over historiske vær- og klimadata av stor variasjon og med mye detaljer av kvalitetskontrollerte målinger. \n",
     "\n",
     "Les mer her [Hva er Frost?](https://frost.met.no/index.html) og [Om Meteorologisk Institutt](https://www.met.no/en/About-us/About-MET-Norway)\n",
     "\n",
@@ -42,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0471092c",
    "metadata": {},
    "outputs": [
@@ -60,27 +94,8 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_csv(\"../data/raa_data_d.csv\", nrows=5)\n",
     "print(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "293ab326",
-   "metadata": {},
-   "source": [
-    "# slett, vurderingskreterier fra mappe:\n",
-    "I prosjektet for utvikling av en miljødataanalyseapplikasjon skal dere først identifisere relevante åpne datakilder, som f.eks. API-er fra meteorologiske institutter og miljøovervåkingsorganisasjoner. Deretter skal dere implementere funksjonalitet for å hente data fra disse kildene ved hjelp av Python-moduler (som eks. requests). For å integrere dataene i applikasjonen, bruker dere teknikker som håndtering av tekstfiler, CSV-filer, JSON-data, samt fil- og katalogadministrasjon. I tillegg skal dere benytte dere av list comprehensions, iteratorer og Pandas SQL (sqldf) for å utforske og forstå dataenes struktur og innhold før de forberedes for videre analyse.\n",
-    "\n",
-    "Vurderingskriterier:\n",
-    "\n",
-    "Hvilke åpne datakilder er identifisert som relevante for miljødata, og hva er kriteriene (f.eks. kildeautoritet, datakvalitet, tilgjengelighet, brukervennlighet osv.) for å vurdere deres pålitelighet og kvalitet?\n",
-    "\n",
-    "Hvilke teknikker (f.eks. håndtering av CSV-filer, JSON-data) er valgt å bruke for å lese inn dataene, og hvordan påvirker disse valgene datakvaliteten og prosessen videre?\n",
-    "\n",
-    "Dersom det er brukt API-er, hvilke spesifikke API-er er valgt å bruke, og hva er de viktigste dataene som kan hentes fra disse kildene?"
    ]
   },
   {
@@ -88,20 +103,22 @@
    "id": "0afe9dc2",
    "metadata": {},
    "source": [
-    "#### Oppgave 3: Databehandling\n",
+    "---\n",
+    "\n",
+    "## **Oppgave 3: Databehandling**\n",
     "\n",
     "Her skal vi fokusere på databehandling ved å utvikle funksjoner som renser og formaterer de innsamlede dataene, med særlig vekt på håndtering av manglende verdier og uregelmessigheter ved hjelp av Pandas. I tillegg skal vi benytte teknikker som list comprehensions, iteratorer, pandas og pandas sql (sqldf) for å manipulere dataene effektivt, noe som vil bidra til å forberede dataene for videre analyse.\n",
     "\n",
-    "### hvilke endringer har vi gjort?\n",
+    "### Hvilke endringer har vi gjort?\n",
     "\n",
-    "Datasettet vi hentet fra MET var av høy kvalitet uten hull så vi valgte å fjerne data for å igjen kunne gjennopprette disse dataene med estimasjon.\n",
+    "Datasettet vi hentet fra MET var av høy kvalitet uten hull så vi valgte å fjerne og dyplisere data for å igjen kunne gjennopprette disse dataene med estimasjon.\n",
     "\n",
     "Her er en oversikt over dataen som ble fjernet og duplisert:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "7a09d50a",
    "metadata": {},
    "outputs": [
@@ -130,16 +147,20 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "sys.path.append(os.path.abspath('..'))\n",
-    "\n",
-    "#henter funksjonen finne_hull fra py-filen finne_mangler fra mappen src\n",
     "from src.finne_mangler import finne_hull\n",
     "\n",
     "filbane = \"../data/raa_data_d.csv\"\n",
     "duplikater, hull = finne_hull(filbane, dato_kolonne=\"date\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6430a94",
+   "metadata": {},
+   "source": [
+    "### Håndtere feil\n",
+    "\n",
+    "Vi benytter så **vasket_data** funksjonen for videre kunne fylle disse hullene og fjerne duplikatene, vi valgte lineær interpolasjon som metode her.  "
    ]
   },
   {
@@ -299,7 +320,7 @@
    "id": "54acb50b",
    "metadata": {},
    "source": [
-    "### Håndtering av  uregelmessigheter i dataen\n",
+    "### Forklaring \n",
     "\n",
     "Manglene og uregelmessighetene vi forventet å møte var:\n",
     "1. manglende datoer\n",
@@ -309,11 +330,11 @@
     "\n",
     "For å håndtere 1. feil lagde vi funksjonene finne_hull(), mer spesifikt brukte vi pandas pd.date_range() for å finne hvilke datoer det gjelder for å så fyller hullene ved metoden interpolasjon i funksjonen vasket_data().\n",
     "\n",
-    "for å fjerne duplikater datoer brukte vi drop_duplicates()\n",
+    "For å fjerne duplikater datoer brukte vi drop_duplicates().\n",
     "\n",
     "Manglende målinger blir plukket opp ved hjelp av en løkke hvor alle verdiene får en type middlertidig \"missing value\" for senere å interpolere dem.\n",
     "\n",
-    "for datoer som kan være i feil format eller tekst brukte vi pd.to_datetime() for å standarisere formatet. \n",
+    "For datoer som kan være i feil format eller tekst brukte vi pd.to_datetime() for å standarisere formatet. \n",
     "\n",
     "\n",
     "### Pandas SQL\n",
@@ -323,9 +344,9 @@
     "les mer her [using SQL with Pandas DataFrames](https://medium.com/@davidfagb/using-sql-with-pandas-dataframes-1c36f57ea65d)\n",
     "\n",
     "### List comperhensions\n",
-    "En måte å manipulere data er ved hjelp av list comprehensions, for eksempel konvertere vi DateTimeIndex-en fra finne_hull() som gjorde datoene mer lesbar som 'YYYY-MM-DD'\n",
+    "En måte å manipulere data er ved hjelp av list comprehensions, for eksempel konvertere vi DateTimeIndex-en for manglende dato fra finne_hull() som gjorde datoene mer lesbar som 'YYYY-MM-DD'\n",
     "\n",
-    "\n",
+    "---\n",
     "\n"
    ]
   },
@@ -334,18 +355,24 @@
    "id": "5dc4382e",
    "metadata": {},
    "source": [
-    "## Slett, vurderingskriterie fra mappe: Oppgave 3: Databehandling\n",
-    "Her skal dere fokusere på databehandling ved å utvikle funksjoner som renser og formaterer de innsamlede dataene, med særlig vekt på håndtering av manglende verdier og uregelmessigheter ved hjelp av Pandas. I tillegg skal dere benytte teknikker som list comprehensions, iteratorer, pandas og pandas sql (sqldf) for å manipulere dataene effektivt, noe som vil bidra til å forberede dataene for videre analyse.\n",
+    "## **Litteraturliste**\n",
+    "*About the Norwegian Meteorological Institute.* (2017, October 2). Www.met.no; Meteorologisk Institutt. https://www.met.no/en/About-us/About-MET-Norway\n",
     "\n",
-    "Vurderingskriterier:\n",
+    "Bhargawa, A., & Singh, A. K. (2019). Solar irradiance, climatic indicators and climate change – An empirical analysis. *Advances in Space Research*, 64(1), 271–277. https://doi.org/10.1016/j.asr.2019.03.018\n",
     "\n",
-    "Hvilke metoder vil du bruke for å identifisere og håndtere manglende verdier i datasettet?\n",
+    "Fagbuyiro, D. (2023, October 17). *Using SQL with Pandas DataFrames.* Medium. https://medium.com/@davidfagb/using-sql-with-pandas-dataframes-1c36f57ea65d\n",
     "\n",
-    "Kan du gi et eksempel på hvordan du vil bruke list comprehensions for å manipulere dataene?\n",
+    "Haigh, J. (2011). *Solar influences on Climate.* Imperial Collage London . https://www.imperial.ac.uk/media/imperial-college/grantham-institute/public/publications/briefing-papers/Solar-Influences-on-Climate---Grantham-BP-5.pdf?utm\n",
     "\n",
-    "Hvordan kan Pandas SQL (sqldf) forbedre datamanipuleringen sammenlignet med tradisjonelle Pandas-operasjoner?\n",
+    "Rouhani, M. (2019). *Applied Programming — Applied Programming.* Ntnu.no. https://rouhani.folk.ntnu.no/textbooks/tdt4114/intro.html\n",
     "\n",
-    "Hvilke spesifikke uregelmessigheter i dataene forventer du å møte, og hvordan planlegger du å håndtere dem?"
+    "Vilius Dumcius. (2024, November 5). *JSON vs CSV: What’s the Difference?* IPRoyal.com; IPRoyal. https://iproyal.com/blog/json-vs-csv/\n",
+    "\n",
+    "W3Schools. (n.d.-a). *Pandas - Removing Duplicates.* Www.w3schools.com. https://www.w3schools.com/python/pandas/pandas_cleaning_duplicates.asp\n",
+    "\n",
+    "W3Schools. (n.d.-b). *Pandas DataFrames.* Www.w3schools.com. https://www.w3schools.com/python/pandas/pandas_dataframes.asp\n",
+    "\n",
+    "*What is Frost?* (2019). Frost.met.no; Meteorologisk Institutt. https://frost.met.no/index.html"
    ]
   },
   {
@@ -353,7 +380,7 @@
    "id": "189b8beb",
    "metadata": {},
    "source": [
-    "Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [del 2 →](del2.ipynb) av prosjektet"
+    "**Gå tilbake til [← innledningen](miljoanalyseprosjekt.ipynb) eller [del 2 →](del2.ipynb) av prosjektet**"
    ]
   }
  ],
