kilde lagt til python

--- a/proj_environment-main/notebooks/del1.ipynb
+++ b/proj_environment-main/notebooks/del1.ipynb
@@ -374,6 +374,8 @@
     "\n",
     "Python. (n.d.-a). *python linechart.* www.python.org https://python-graph-gallery.com/line-chart/\n",
     "\n",
+    "Python. (n.d.-a). *Python matplotlib line linestyle.* www.python.org. https://www.w3schools.com/python/matplotlib_line.asp\n",
+    "\n",
     "Rouhani, M. (2019). *Applied Programming — Applied Programming.* Ntnu.no. https://rouhani.folk.ntnu.no/textbooks/tdt4114/intro.html\n",
     "\n",
     "Vilius Dumcius. (2024, November 5). *JSON vs CSV: What’s the Difference?* IPRoyal.com; IPRoyal. https://iproyal.com/blog/json-vs-csv/\n",
