fikset feilkoblet lenke

--- a/proj_environment-main/docs/litteratur.ipynb
+++ b/proj_environment-main/docs/litteratur.ipynb
@@ -32,7 +32,7 @@
    "id": "4a82c9e9",
    "metadata": {},
    "source": [
-    "**Gå til [README](.README.md)**"
+    "**Gå til [README](../README.md)**"
    ]
   }
  ],
