fikset enda flere kilder og linker

--- a/proj_environment-main/notebooks/del2.ipynb
+++ b/proj_environment-main/notebooks/del2.ipynb
@@ -409,7 +409,11 @@
    "source": [
     "---\n",
     "\n",
-    "## **Litteraturliste**\n"
+    "## **Litteraturliste**\n",
+    "\n",
+    "*3.3. Metrics and scoring: quantifying the quality of predictions — scikit-learn 0.22 documentation*. (2013). Scikit-Learn.org. https://scikit-learn.org/stable/modules/model_evaluation.html#regression-metrics\n",
+    "\n",
+    "\n"
    ]
   },
   {
