refleksjon og link

--- a/proj_environment-main/notebooks/del1.ipynb
+++ b/proj_environment-main/notebooks/del1.ipynb
@@ -46,6 +46,8 @@
     "\n",
     "I VSCode, opprett en ny Jupyter Notebook-fil (med filendelsen «.ipynb») i prosjektmappen. Skriv og kjør kode i den første cellen for å teste at miljøet fungerer som det skal:\n",
     "\n",
+    "**[LINK TIL REPO](https://github.com/junor19/prog_gr9)**\n",
+    "\n",
     "Gå til [oppgave 1](oppg1.ipynb) \n",
     "\n",
     "---"
